# cpp-chat

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md
.cache/clangd/index/: chat.cpp.F3506E8B4702BEF1.idx  chat.h.CFB7ECE9118EEAFD.idx  main.cpp.0ADC7FA3BF763D19.idx
.zed/: run.sh  tasks.json
client/: CMakeLists.txt  chat.cpp  chat.h  main.cpp  main_chat.cpp
client/utils/: rand.h
common/: CMakeLists.txt
common/src/: globals.h  rand.cpp  rand.h  time_util.cpp  time_util.h
server/: CMakeLists.txt  main.cpp
src/: chat.cpp  chat.h  main.cpp
